--- a/src/App.css
+++ b/src/App.css
@@ -108,33 +108,33 @@ svg {
   overflow: hidden;
 }
 
-.player {
+.team {
   display: flex;
   font-size: 1.2em;
   border-bottom: solid 2px #eeeeee;
   letter-spacing: 2px;
 }
 
-.player:last-of-type {
+.team:last-of-type {
   border-bottom-color: #d4caff;
 }
 
-.player-name:hover .remove-player {
+.team-name:hover .remove-team {
   visibility: visible;
 }
 
-.player-name,
+.team-name,
 .counter-score {
   color: #2f2366;
 }
 
-.player-name {
+.team-name {
   flex-grow: 1;
   line-height: 3.5em;
   padding-left: 10px;
 }
 
-.remove-player {
+.remove-team {
   font-size: 1.15em;
   border: none;
   outline: none;
